<resources>
    <string name="app_name">వివిఐటి బాలోత్సవ్</string>
    <string name="start">Proceed to Register</string>
    <string name="next">NEXT</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Logout</string>
    <string name="photo_gallery">ఫొటో గ్యాలరీ</string>
    <string name="wrong_password">పాస్వర్డ్ సరికాదు </string>
    <string name="check_connection">అంతర్జాల కనెక్షన్ను తనిఖీ చేయండి</string>
    <string name="ok">అలాగే</string>
    <string name="enter_all_fields">అన్నింటినీ పూరించండి</string>
    <string name="otp_sent">OTP పంపబడింది</string>
    <string name="school_code_is_already_taken">పాఠశాల కోడ్ ఇప్పటికే తీసుకోబడింది</string>
    <string name="connected_internet">అంతర్జాలానికి కనెక్ట్ అవ్వబడినది  </string>
    <string name="incorrect_otp">OTP ని సరిచూసుకోండి </string>
    <string name="click_here_to_fill_Accomodation_form">వసతి కొరకు ఈ పత్రము నింపడానికి ఇక్కడ క్లిక్ చేయండి </string>
    <string name="School_code">పాఠశాల కోడ్</string>
    <string name="password">పాస్వర్డ్</string>
    <string name="login">వివిఐటి బాలోత్సవ్ లాగిన్ </string>
    <string name="new_user_register_here">కొత్త యూజర్ రిజిస్ట్రేషన్</string>
    <string name="school_type">పాఠశాల రకం</string>
    <string name="head_master_name">ప్రధానోపాధ్యాయుని పేరు </string>
    <string name="head_master_email">రిజిస్టర్డ్ ఇమెయిల్ </string>
    <string name="head_master_phno">ప్రధానోపాధ్యాయుని ఫోన్ నెంబర్ </string>
    <string name="coordinator_name">టీమ్ పర్యవేక్షకుల పేరు </string>
    <string name="coordinator_phno">టీమ్ పర్యవేక్షకుల ఫోన్ నెంబర్ </string>
    <string name="town">పట్టణం/గ్రామం</string>
    <string name="district">జిల్లా</string>
    <string name="state">రాష్ట్రం </string>
    <string name="pincode">పిన్ కోడ్</string>
    <string name="need_accomodation">వసతి అవసరం</string>
    <string name="rules_of_events">పోటీల నియమాలు </string>
    <string name="events">పోటీలు </string>
    <string name="registration">పోటీల నమోదు </string>
    <string name="registered_events">నమోదైన పోటీలు</string>
    <string name="announcements">ప్రకటనలు</string>
    <string name="results">ఫలితాలు</string>
    <string name="home">హోమ్</string>
    <string name="slow_internet_connection">అంతర్జాలం నెమ్మదిగా ఉన్నది </string>
    <string name="school_name">పాఠశాల పేరు</string>
    <string name="general_rules">నియమాలు</string>
    <string name="logout">లాగ్ అవుట్</string>
    <string name="about"></string>
    <string name="printout_notifiation">దయచేసి ఈ పత్రం యొక్క ముద్రణను తీసుకురండి</string>
    <string name="vvit_balotsav">వివిఐటి బాలోత్సవ్ </string>
    <string name="cancel">రద్దు</string>
    <string name="juniors">జూనియర్లు</string>
    <string name="seniors">సీనియర్లు</string>
    <string name="subjuniors">సబ్ జూనియర్లు</string>
    <string name="school_code_1">పాఠశాల కోడ్ : UDISE / CBSE / ICSC  గుర్తింపు సంఖ్య </string>
    <string name="team">జట్టు</string>
    <string name="edit">మార్పులు </string>
    <string name="no_internet">అంతర్జాలం లేదు </string>
    <string name="succesfully_reg_for_events">విజయవంతంగా ఈవెంట్స్ కి నమోదు అయ్యారు.</string>
    <string name="event_not_reg">ఈవెంట్లకు నమోదు కాలేదు</string>
    <string name="congratulations">అభినందనలు</string>
    <string name="no_results">ఫలితాలు లేవు</string>
    <string name="registration_new">నమోదు</string>
    <string name="empty_school_code">పాఠశాల కోడ్ ని పూరించండి</string>
    <string name="empty_password">పాస్వర్డ్  ని పూరించండి </string>
    <string name="invalid_username">పాఠశాల కోడ్ సరి కాదు</string>
    <string name="select_school_type">--- స్కూల్ సిలబస్ టైపు ని సెలెక్ట్ చేసుకొండి --- </string>
    <string name="chitralekanam">అర్హత విభాగము :\n సబ్ జూనియర్స్ - నర్సరీ నుండి 4వ  తరగతి వరకు \n  జూనియర్స్ - 5వ  తరగతి నుండి 7వ  తరగతి వరకు \n సీనియర్స్ -  8వ  తరగతి నుండి 10వ  తరగతి వరకు \n ప్రతి పాఠశాల తరుపున ఒక్కొక్క విభాగం నుండి ఐదుగురు (5)  విద్యార్థులకు ప్రవేశం.\n డ్రాయింగ్ షీటు ఇవ్వబడును\n అట్ట, రంగులు, బ్రష్, పెన్సిల్ తెచ్చుకోవలెను. </string>
    <string name="vaktruthvam">అర్హత విభాగము :\n సబ్ జూనియర్స్ - నర్సరీ నుండి 4వ  తరగతి వరకు \n  జూనియర్స్ - 5వ  తరగతి నుండి 7వ  తరగతి వరకు \n సీనియర్స్ -  8వ  తరగతి నుండి 10వ  తరగతి వరకు \n ప్రతి పాఠశాల తరుపున ఒక్కొక్క విభాగం నుండి ఇద్దరు  (2) విద్యార్థులకు ప్రవేశం.\n ఒక గంట ముందు అంశం ఇవ్వబడును.</string>
    <string name="ekapatrabhinayem">అర్హత విభాగము :\n జూనియర్స్ - 5వ  తరగతి నుండి 7వ  తరగతి వరకు \n సీనియర్స్ -  8వ  తరగతి నుండి 10వ  తరగతి వరకు \n ప్రతి పాఠశాల తరుపున ఒక్కొక్క విభాగం నుండి ఇద్దరు (2) విద్యార్థులకు ప్రవేశం.\nసామజిక,చారిత్రక, పౌరాణిక పాత్రలు ధరించవచ్చు. \nక్యాసెట్లు, సీడీలు అనుమతించబడవు.\n సమయపాలన పాటించవలెను.</string>
    <string name="sastriyanrutyam">అర్హత విభాగము :\n సబ్ జూనియర్స్ - నర్సరీ నుండి 4వ  తరగతి వరకు \n  జూనియర్స్ - 5వ  తరగతి నుండి 7వ  తరగతి వరకు \n సీనియర్స్ -  8వ  తరగతి నుండి 10వ  తరగతి వరకు \n ప్రతి పాఠశాల తరుపున ఒక్కొక్క విభాగం నుండి ఒక విద్యార్థికి ప్రవేశం. \nఆర్కెస్ట్రా / సిడి / పెన్ డ్రైవ్  తెచ్చుకోవాలి </string>
    <string name="samprathayaveshadarana">అర్హత విభాగము :\n సబ్ జూనియర్స్ - నర్సరీ నుండి 4వ  తరగతి వరకు \n ప్రతి పాఠశాల నుండి ఒక విద్యార్థికి ప్రవేశం, \nభారతదేశంలో ఏదేని ప్రాంతానికి చెందిన సంప్రదాయ  వస్త్రధారణ ప్రతిబింబించేలా ఉండాలి.</string>
    <string name="telugulonematladudham">అర్హత విభాగము :\n సబ్ జూనియర్స్ - నర్సరీ నుండి 4వ  తరగతి వరకు \n  జూనియర్స్ - 5వ  తరగతి నుండి 7వ  తరగతి వరకు \n సీనియర్స్ -  8వ  తరగతి నుండి 10వ  తరగతి వరకు \n ప్రతి పాఠశాల తరుపున ఒక్కొక్క విభాగం నుండి ఇద్దరు (2) విద్యార్థులకు ప్రవేశం,\n ఇచ్చిన అంశాన్ని గురించి ఇతర భాషా పదాలు వాడకుండా పూర్తిగా తెలుగులోనే మాట్లాడాలి.</string>
    <string name="sastriyasangeetam">అర్హత విభాగము :\n జూనియర్స్ - 5వ  తరగతి నుండి 7వ  తరగతి వరకు \n సీనియర్స్ -  8వ  తరగతి నుండి 10వ  తరగతి వరకు \n ప్రతి పాఠశాల తరుపున ఒక్కొక్క విభాగం నుండి ఇద్దరు (2) విద్యార్థులకు ప్రవేశం, \nసమయపాలన పాటించవలెను.</string>
    <string name="generalquiz"> ప్రతి పాఠశాల నుండి ఒక టీమ్ కు ప్రవేశం, \n ఒక టీమ్ కు ముగ్గురు (3) విద్యార్థులు. \n ప్రిలిమినరీ  రౌండ్ వ్రాత పరీక్ష ద్వారా నిర్వహించబడును. \n అర్హత పొందిన టీమ్ లకు క్వార్టర్ ఫైనల్స్, సెమీ ఫైనల్స్, ఫైనల్స్, పోటీ ఓరల్ పద్దతి ద్వారా పోటీ నిర్వహించబడును.   </string>
    <string name="digitalchitralekhanam">అర్హత విభాగము :\n సబ్ జూనియర్స్ - నర్సరీ నుండి 4వ  తరగతి వరకు \n  జూనియర్స్ - 5వ  తరగతి నుండి 7వ  తరగతి వరకు \n సీనియర్స్ -  8వ  తరగతి నుండి 10వ  తరగతి వరకు \n ప్రతి పాఠశాల తరుపున ఒక్కొక్క విభాగం నుండి ముగ్గురు (3) విద్యార్థులకు ప్రవేశం, \n ఎమ్.ఎస్. పెయింట్ సాఫ్ట్ వేర్ ను సబ్యోగించి కంప్యూటరు చిత్రలేఖనం ద్వారా చిత్రం గీయాలి.</string>
    <string name="telugupadhyam">అర్హత విభాగము :\n సబ్ జూనియర్స్ - నర్సరీ నుండి 4వ  తరగతి వరకు \n  జూనియర్స్ - 5వ  తరగతి నుండి 7వ  తరగతి వరకు \n సీనియర్స్ -  8వ  తరగతి నుండి 10వ  తరగతి వరకు \n ప్రతి పాఠశాల తరుపున ఒక్కొక్క విభాగం నుండి ఇద్దరు (2) విద్యార్థులకు ప్రవేశం,\n సబ్ జూని।।  విభాగముల ఏదేని ఒక శతక పద్యం చెప్పి భావం వివరించాలి. \n జూని।। సీని।। విభాగంలో పోతనామాత్యుల భాగవతం నుండి ఏదేని ఒక వృత్త పద్యం చెప్పి భావం వివరించాలి.</string>
    <string name="sinigeethalu">అర్హత విభాగము :\n సబ్ జూనియర్స్ - నర్సరీ నుండి 4వ  తరగతి వరకు \n  జూనియర్స్ - 5వ  తరగతి నుండి 7వ  తరగతి వరకు \n సీనియర్స్ -  8వ  తరగతి నుండి 10వ  తరగతి వరకు \n ప్రతి పాఠశాల తరుపున ఒక్కొక్క విభాగం నుండి ఇద్దరు (2) విద్యార్థులకు ప్రవేశం, \n అశ్లిలం, అసభ్యం  కాని పాటలు మాత్రమే ఎంచుకోవలెను. \nఆర్కెస్ట్రా ఉండరాదు. \nఫైనల్స్ కు ఎంపికైన విద్యార్థులు నిర్వాహకులు అందించిన ఆర్కెస్ట్రాలు సబ్యోగించి ప్రదర్శన ఇవ్వవలెను.</string>
    <string name="mukhabinayem">అర్హత విభాగము :\n జూనియర్స్ - 5వ  తరగతి నుండి 7వ  తరగతి వరకు \n సీనియర్స్ -  8వ  తరగతి నుండి 10వ  తరగతి వరకు \n ప్రతి పాఠశాల తరుపున ఒక్కొక్క విభాగం నుండి ఇద్దరు (2) విద్యార్థులకు ప్రవేశం, సమయపాలన పాటించవలెను, సంభాషణలు ఉండరాదు.</string>
    <string name="vaktrutvam">అర్హత విభాగము :\n సబ్ జూనియర్స్ - నర్సరీ నుండి 4వ  తరగతి వరకు \n  జూనియర్స్ - 5వ  తరగతి నుండి 7వ  తరగతి వరకు \n సీనియర్స్ -  8వ  తరగతి నుండి 10వ  తరగతి వరకు \n ప్రతి పాఠశాల తరుపున ఒక్కొక్క విభాగం నుండి ఇద్దరు (2) విద్యార్థులకు ప్రవేశం, \nఒక గంట ముందు అంశం ఇవ్వబడును.</string>
    <string name="samskruthaslokam">అర్హత విభాగము :\n సబ్ జూనియర్స్ - నర్సరీ నుండి 4వ  తరగతి వరకు \n ప్రతి పాఠశాల తరుపున ఇద్దరు (2) విద్యార్థులకు ప్రవేశం, \nహితోపదేశ, ఇతిహాసాది, కావ్యాలలోనివి కాని, సుభాషితాలు లోనివి కాని ఒక సంస్కృత శ్లోకం చెప్పి భావం తెలుగులో లేదా సంస్కృతం లో వివరించాలి.</string>
    <string name="janapadhanruthyam">అర్హత విభాగము :\n సబ్ జూనియర్స్ - నర్సరీ నుండి 4వ  తరగతి వరకు \n  జూనియర్స్ - 5వ  తరగతి నుండి 7వ  తరగతి వరకు \n సీనియర్స్ -  8వ  తరగతి నుండి 10వ  తరగతి వరకు \n ప్రతి పాఠశాల తరుపున ఒక్కొక్క విభాగం నుండి ఒక విద్యార్థికి ప్రవేశం, \n ఆర్కెస్ట్రా / సిడి / పెన్ డ్రైవ్ తెచుకోవలెను. \n అశ్లిలం, అసభ్యం  కాని పాటలు మాత్రమే ఎంచుకోవలెను. \n వైవిధ్యమైన పాటలు, క్రొత్త బాణీలకు ప్రాధాన్యత ఇవ్వబడును, సమయపాలన పాటించవలెను.</string>
    <string name="kavitharachana">అర్హత విభాగము :\n జూనియర్స్ - 5వ  తరగతి నుండి 7వ  తరగతి వరకు \n సీనియర్స్ -  8వ  తరగతి నుండి 10వ  తరగతి వరకు \n ప్రతి పాఠశాల తరుపున ఒక్కొక్క విభాగం నుండి ఇద్దరు  (2) విద్యార్థులకు ప్రవేశం,\n తెల్ల కాగితం, అట్ట, కలము తెచ్చుకోవాలి, \n విడివిడిగా ప్రకటించిన అంశాల పై ఇరవై పంక్తులు మించకుండా కవిత వ్రాయాలి.</string>
    <string name="natikalu">ప్రతి పాఠశాల నుండి ఒక నాటికకు ప్రవేశం, పది (10) మందికి మించరాదు, \n మేకప్ సామాగ్రి తెచ్చుకోవాలి. \n సామజిక ఇతివృత్తాలకు ప్రాధాన్యత ఇవ్వబడును. \n సమయపాలన పాటించవలెను.  </string>
    <string name="vadhyasangeetam">అర్హత విభాగము :\n సబ్ జూనియర్స్ - నర్సరీ నుండి 4వ  తరగతి వరకు \n  జూనియర్స్ - 5వ  తరగతి నుండి 7వ  తరగతి వరకు \n సీనియర్స్ -  8వ  తరగతి నుండి 10వ  తరగతి వరకు \n ప్రతి పాఠశాల తరుపున ఒక్కొక్క విభాగం నుండి ఇద్దరు  (2) విద్యార్థులకు ప్రవేశం, \n రాగ ప్రధానంగా గల వీణ, వయోలిన్, ఫ్లూట్, గిటార్ మొదలగునవి ఇన్ స్ట్రుమెంట్స్  తెచ్చుకోవాలి.</string>
    <string name="kadharachana">అర్హత విభాగము :\n జూనియర్స్ - 5వ  తరగతి నుండి 7వ  తరగతి వరకు \n సీనియర్స్ -  8వ  తరగతి నుండి 10వ  తరగతి వరకు \n ప్రతి పాఠశాల తరుపున ఒక్కొక్క విభాగం నుండి ఇద్దరు  (2) విద్యార్థులకు ప్రవేశం, \n తెల్ల కాగితం, అట్ట, కలము తెచ్చుకోవాలి,\n విడివిడిగా ప్రకటించిన అంశాల పై కథ వ్రాయాలి.</string>
    <string name="schedule">పోటీల కాల పట్టిక </string>
    <string name="email">సెట్టింగ్స్</string>
    <string name="devp"><u>Developer Team</u></string>
    <string name="sai_chand">Mr.Sai Chand Pratapagiri</string>
    <string name="venkatsai">Mr.Venkata Sai Dasari</string>
    <string name="yuva">Mr.Yuva kishore Bhashyam</string>
    <string name="mounika">Ms.Mounika Allu</string>
    <string name="designers"><u>Design Team</u></string>
    <string name="tejesh">Mr.Tejesh Reddy Mallampati</string>
    <string name="vishnu">Mr.Vishnu Vardhan Manukonda</string>
    <string name="koundinya">Mr.Koundinya Lanka</string>
    <string name="testers"><u>Supporting Team</u></string>
    <string name="revanth">Mr.Revanth Y</string>
    <string name="ajay">Mr.Ajay K</string>
    <string name="koti">Mr.Koti Reddy E</string>
    <string name="likith">Mr.Likith Varma B</string>
    <string name="yashwanth">Mr.Yashwanth sai</string>
    <string name="ryan">Mr.Ryan P</string>
    <string name="abhilash">Mr.Abhilash G</string>
    <string name="keerthi">Ms.Keerthi Devipriya G</string>
    <string name="reshma">Ms.Reshma</string>
    <string name="reshmanjali">Ms.Reshmanjali</string>
    <string name="sirisha">Ms.Sirisha</string>
    <string name="pavani">Ms.Pavani</string>
    <string name="sushma">Ms.Sushma</string>
    <string name="sahithi">Ms.Pavana Sahithi G</string>
    <string name="srilekha">Ms.Sri Lekha</string>
</resources>