<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/tv_description_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:padding="8dp"
        android:textSize="@dimen/heading"
        android:fontFamily="serif"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/testers"
        android:textColor="@color/vvit_color_heading"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_description1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:padding="8dp"
        android:textSize="@dimen/desc"
        android:text="@string/ajay"
        android:textColor="@color/vvit_color"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_description2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:padding="8dp"
        android:text="@string/revanth"
        android:textSize="@dimen/desc"
        android:textColor="@color/vvit_color"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_description3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:padding="8dp"
        android:textSize="@dimen/desc"
        android:text="@string/koti"
        android:textColor="@color/vvit_color"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_description4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:padding="8dp"
        android:textSize="@dimen/desc"
        android:text="@string/likith"
        android:textColor="@color/vvit_color"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_description5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:padding="8dp"
        android:text="@string/yashwanth"
        android:textSize="@dimen/desc"
        android:textColor="@color/vvit_color"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_description6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:padding="8dp"
        android:text="@string/abhilash"
        android:textSize="@dimen/desc"
        android:textColor="@color/vvit_color"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_description7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:padding="8dp"
        android:text="@string/ryan"
        android:textSize="@dimen/desc"
        android:textColor="@color/vvit_color"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_description9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:padding="8dp"
        android:text="@string/keerthi"
        android:textSize="@dimen/desc"
        android:textColor="@color/vvit_color"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_description10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:padding="8dp"
        android:text="@string/srilekha"
        android:textSize="@dimen/desc"
        android:textColor="@color/vvit_color"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_description11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:padding="8dp"
        android:text="@string/reshma"
        android:textSize="@dimen/desc"
        android:textColor="@color/vvit_color"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_description12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:padding="8dp"
        android:text="@string/reshmanjali"
        android:textSize="@dimen/desc"
        android:textColor="@color/vvit_color"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_description13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:padding="8dp"
        android:text="@string/pavani"
        android:textSize="@dimen/desc"
        android:textColor="@color/vvit_color"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_description14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:padding="8dp"
        android:text="@string/sirisha"
        android:textSize="@dimen/desc"
        android:textColor="@color/vvit_color"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_description15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:padding="8dp"
        android:text="@string/sushma"
        android:textSize="@dimen/desc"
        android:textColor="@color/vvit_color"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_description8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:padding="8dp"
        android:text="@string/sahithi"
        android:textSize="@dimen/desc"
        android:textColor="@color/vvit_color"
        android:textStyle="bold" />

</LinearLayout>