<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/tv_description_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:padding="8dp"
        android:fontFamily="serif"
        android:textSize="@dimen/heading"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/designers"
        android:textColor="@color/vvit_color_heading"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="@dimen/desc"
        android:padding="8dp"
        android:text="@string/tejesh"
        android:textColor="@color/vvit_color"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_description2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="@dimen/desc"
        android:padding="8dp"
        android:text="@string/vishnu"
        android:textColor="@color/vvit_color"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_description1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:padding="8dp"
        android:textSize="@dimen/desc"
        android:text="@string/koundinya"
        android:textColor="@color/vvit_color"
        android:textStyle="bold" />

</LinearLayout>